--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -30,6 +30,7 @@
   left:0;
   width: 100%;
   height: 100%;
+  .default-back;
 }
 
 .size(@width, @height) {
@@ -44,23 +45,18 @@
   .rotateY(180deg);
 }
 
-.container{
+.face-container{
   position: relative;
   .size(100%,100%);
   overflow: hidden;
   .perspective(1000);
-}
-
-.face-container{
-  .container;
   overflow: inherit;
 }
-
 
 .faces{
   .fill;
   .preserve3d();
-  .face{
+  >.face{
     .fill;
     .default-back;
   }
@@ -71,13 +67,10 @@
   .transform(scale3d(0,0,1));
 }
 
-.layer-container{
-  .container;
-}
 .layers{
   .fill;
   .preserve3d();
-  .layer{
+  >.layer{
     .preserve3d();
     .fill;
     .default-back;
@@ -104,31 +97,14 @@
   }
 }
 
-
-
-
-
 .fixbar(@height: @headerHeight) {
-  position:relative; z-index:2;
+  position:fixed; z-index:2;
   width:100%;
   height: @height;
   line-height: @height;
   background: blueviolet;
-//  #gradient > .nav-bar;
-  //  background: url(toolbar.png) #6d84a2 repeat-x;
-  padding:0;
-  color:#eee;
-  //  font-size:20px;
   text-align:center;
-
-  a{
-    color:#f3f3f3;
-    text-decoration:none;
-    font-weight:bold;
-    text-shadow:0 -1px 0 rgba(0,0,0,0.5);
-  }
 }
-
 
 #gradient {
   .nav-bar{
