--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -192,3 +192,10 @@
 //@import '../../vendor/bootstrap/less/variables.less';
 @headerHeight:  50px;
 @footerHeight:  0px;
+
+@thumbnail-height: 105px;
+@thumbnail-width: 140px;
+@list-meta-width: 50px;
+@list-item-top-margin: 5px;
+
+@itemdetail-option-height: 40px;
