--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -1,16 +1,16 @@
 
 <div class="header">
-    <a class="option pull-left" ng-click="goBack()"><i class="icon-chevron-left icon-large"></i></a>
+    <a class="option pull-left plm" ng-click="goBack()"><i class="icon-chevron-left icon-large"></i></a>
     <span>{{e.title}}</span>
-    <a class="option pull-right" ng-click="onEdit()"><i class="icon-edit icon-large"></i></a>
+    <a class="option pull-right prm" ng-click="onEdit()"><i class="icon-edit icon-large"></i></a>
 </div>
 
-<div class="content mhs">
-    <div class="mts clearfix">
-        <div class="pull-left prm">
+<div class="container">
+    <div class="itemdetail-thumb">
+        <div class="item-thumbnail">
             <img ng-src="{{meta.imgbase}}{{e.image.thumbnail2}}"/>
         </div>
-        <div class="">
+        <div class="itemdetail-info">
             <span>活动类型：{{e.ca}}</span><br>
             <span>活动状态：{{status[e.status+1]}}</span><br>
             <span>开始时间：{{e.start_time| date:'MM月dd日 HH:mm'}}</span><br>
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div class="mvl">
+    <div class="itemdetail-option">
         <a class="btn btn-primary" ng-click="onEdit()" ng-show="IamOwner">修改活动</a>
         <a class="btn btn-primary" ng-click="onRegister()" ng-init="text=['马上报名','取消报名']" ng-hide="IamOwner">
             {{text[IamIn]}}</a>
@@ -28,7 +28,7 @@
         <a class="btn btn-inverse" ng-click="onUpload()">上传照片</a>
     </div>
 
-    <div class="container" ifill-bottom="recursive" ifill-margin=5 ng-init="select=0">
+    <div class="itemdetail-misc" ifill-bottom="recursive" ifill-margin=5 ng-init="select=0" style="background: wheat">
         <div  ihtabs="select" ihtabs-padding=20 class="tabs-navs" style="background: beige">
             <span ng-click="select=0" ng-class="{active: select==0}">活动简介</span>
             <span ng-click="select=1" ng-class="{active: select==1}">活动讨论</span>
@@ -37,7 +37,7 @@
 
         <div ihtabs-bar="blue" class="tabs-bar" style="height: 5px"></div>
 
-        <div ihshift="select" ihshift-margin=40 ifill-bottom="nested" style="z-index: -1;">
+        <div ihshift="select" ihshift-margin=40 ifill-bottom="nested">
             <div style="background: blanchedalmond" ivscroll ivreset="e">
                 <p style="white-space:pre-wrap">{{e.description}}</p>
                 <hr>
@@ -51,10 +51,6 @@
                 <div>
                     <input class="pull-left" ng-model="comment" type="text" ifill-left=4>
                     <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
-                    <div style="clear: both">
-                        <input type="checkbox" ng-model="wbChecked" style="width: auto">
-                        <span>同时发布到新浪微博</span>
-                    </div>
                 </div>
 
                 <div ng-repeat="c in e.comment_set">
@@ -69,9 +65,9 @@
                             </p>
                             <p class="mrl prl">
                                 <span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>
-                                                <span class="pull-right" ng-show="meta.user.id===c.author.id">
-                                                    <a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>
-                                                 </span>
+                                <span class="pull-right" ng-show="meta.user.id===c.author.id">
+                                    <a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>
+                                 </span>
                             </p>
                         </div>
                     </div>
@@ -83,7 +79,6 @@
                     <img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">
                 </a>
             </div>
-
         </div>
     </div>
 </div>
