--- a/src/less/main.less
+++ b/src/less/main.less
@@ -122,17 +122,18 @@ li {
   }
 }
 
-.tabs-bar{
-  background: burlywood;
+
+.btn{
+  display: inline-block;
+  padding: @btn-padding-v @btn-padding-h;
+  line-height: @btn-line-height;
 }
-.tabs-navs{
-  background: gainsboro;
-//  border-bottom: 4px burlywood solid;
-  >span{
-    .pvs;
-    &.active{
-      background: greenyellow;
-    }
+
+.form-main{
+  .mhm;
+  .pbm;
+  >div{
+    .pvm;
   }
 }
 
