--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -198,4 +198,9 @@
 @list-meta-width: 50px;
 @list-item-top-margin: 5px;
 
-@itemdetail-option-height: 40px;
+@btn-padding-v: 8px;
+@btn-padding-h: 10px;
+@btn-line-height: 20px;
+@btn-height: @btn-line-height+@btn-padding-v*2;
+
+
