--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -28,59 +28,77 @@
         <a class="btn btn-inverse" ng-click="onUpload()">上传照片</a>
     </div>
 
-    <div class="itemdetail-misc" ifill-bottom="recursive" ifill-margin=5 ng-init="select=0" style="background: wheat">
-        <div  ihtabs="select" ihtabs-padding=20 class="tabs-navs" style="background: beige">
+    <div class="itemdetail-misc" ng-init="select=0">
+        <div ihtabs="select" ihtabs-padding=20 class="tabs-navs">
             <span ng-click="select=0" ng-class="{active: select==0}">活动简介</span>
             <span ng-click="select=1" ng-class="{active: select==1}">活动讨论</span>
             <span ng-click="select=2"  ng-class="{active: select==2}">活动照片</span>
         </div>
 
-        <div ihtabs-bar="blue" class="tabs-bar" style="height: 5px"></div>
+        <div ihtabs-bar="blue" class="tabs-bar"></div>
 
-        <div ihshift="select" ihshift-margin=40 ifill-bottom="nested">
-            <div style="background: blanchedalmond" ivscroll ivreset="e">
-                <p style="white-space:pre-wrap">{{e.description}}</p>
-                <hr>
-                <p>参与名单<span><small>({{e.attendees.length}}):</small></span></p>
-                <a ng-repeat="u in e.attendees">
-                    <img style="vertical-align: middle" ng-src={{u.profile_image_url}} />
-                    <span>{{u.name}}</span>
-                </a>
-            </div>
-            <div style="background: cadetblue" ng-controller='CommentCtrl' ivscroll ivreset="e">
+        <div ihshift="select" ihshift-margin=40 class="tabs-content">
+            <div ng-iscroll='e.attendees' class="tabs-pane">
                 <div>
-                    <input class="pull-left" ng-model="comment" type="text" ifill-left=4>
-                    <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
-                </div>
-
-                <div ng-repeat="c in e.comment_set">
-                    <div class="pvm clearfix">
-                        <div class="pull-left prm">
-                            <img  ng-src={{c.author.profile_image_url}} />
-                        </div>
-                        <div >
-                            <p class="pbm">
-                                <span>{{c.author.name}} : </span>
-                                <span>{{c.body}}</span>
-                            </p>
-                            <p class="mrl prl">
-                                <span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>
-                                <span class="pull-right" ng-show="meta.user.id===c.author.id">
-                                    <a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>
-                                 </span>
-                            </p>
-                        </div>
-                    </div>
+                    <div style="white-space:pre-wrap;padding-top: 5px">{{e.description}}</div>
                     <hr>
+                    <p>参与名单<span><small>({{e.attendees.length}}):</small></span></p>
+                    <a ng-repeat="u in e.attendees">
+                        <img class="user-thumbnail" style="vertical-align: middle" ng-src={{u.profile_image_url}} />
+                        <span>{{u.name}}</span>
+                    </a>
                 </div>
             </div>
-            <div style="background: darkgray" ivscroll ivreset="e">
-                <a ng-repeat="img in e.album">
-                    <img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">
-                </a>
+
+            <div ng-iscroll='e.comment_set' class="tabs-pane" ng-controller='CommentCtrl'>
+                <div class="comment-content">
+                    <div ng-iscroll-pull="{statusID: 'pullStatus', onLoad: onRefresh}" class="pull pullDown">
+                        <span class="pullIcon pullDown" ng-class="{flip:pullStatus=='flip',loading:pullStatus=='loading'}"></span>
+                        <span ng-init="pullStatus='idle'; pullText={idle:'下拉可以刷新...', flip:'松开即可刷新...', loading:'加载中...'}">{{pullText[pullStatus]}}</span>
+                    </div>
+                    <div ng-repeat="c in e.comment_set">
+                        <div class="pvs clearfix">
+                            <div class="user-thumbnail pull-left prm">
+                                <img  ng-src={{c.author.profile_image_url}} />
+                            </div>
+                            <div >
+                                <div>
+                                    <span>{{c.author.name}} : </span>
+                                    <span>{{c.body}}</span>
+                                </div>
+                                <div>
+                                    <span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>
+                                    <span class="pull-right" ng-show="meta.user.id===c.author.id">
+                                        <a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>
+                                     </span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                    <div ng-iscroll-more="{statusID: 'moreStatus', onLoad: onMore}" class="pull pullUp">
+                        <span class="pullIcon pullUp" ng-class="{loading:moreStatus=='loading'}"></span>
+                        <span ng-bind="moreText[moreStatus]" ng-init="moreText={idle:'加载更多...',loading:'加载中...'};moreStatus='idle'"></span>
+                    </div>
+                </div>
+                <div class="comment-form">
+                    <input class="pull-left" ng-model="comment" type="text" ifill-left>
+                    <a class="btn btn-primary pull-right" ng-click="onComment()">发布</a>
+                </div>
+            </div>
+
+            <div ng-iscroll='e.album' class="tabs-pane">
+                <div >
+                    <a ng-repeat="img in e.album">
+                        <img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
+
+
+
 </div>
 
 
